feat: application.yml 설정.

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
     </dependencies>
 
     <build>
+        <finalName>batch</finalName>
         <plugins>
             <plugin>
                 <groupId>org.asciidoctor</groupId>
