--- a/.github/workflows/dev-deploy-actions.yml
+++ b/.github/workflows/dev-deploy-actions.yml
@@ -22,13 +22,13 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -P dev --file pom.xml
 
-      - name: upload file
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DEV_SSH_IP }}
-          username: ${{ secrets.DEV_SSH_ID }}
-          key: ${{ secrets.DEV_SSH_KEY }}
-          port: ${{ secrets.DEV_SSH_PORT }}
-          source: "target/*.jar"
-          target: "~/"
-          rm: false
+#      - name: upload file
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.DEV_SSH_IP }}
+#          username: ${{ secrets.DEV_SSH_ID }}
+#          key: ${{ secrets.DEV_SSH_KEY }}
+#          port: ${{ secrets.DEV_SSH_PORT }}
+#          source: "target/*.jar"
+#          target: "~/"
+#          rm: false
