Feature/ci cd (#1)
* feat: cicd

* feat: application.yml 설정.

* fix: dev 서버 연결 끊기

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     </dependencies>
 
     <build>
+        <finalName>batch</finalName>
         <plugins>
             <plugin>
                 <groupId>org.asciidoctor</groupId>
