feature: mysql 연결 설정 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://133.186.241.167:3306/project_be7_nuribooks_prod?useSSL=false&serverTimezone=UTC
-    username: ENC(E7wzC9kl4nVwfEV7JsZ09WVAXwAQhSwy)
-    password: ENC(udeUrEU3cfiVaNkqv4zwgEhifPvD2iRzsL5Jr/E2/u4=)
+    username: be7_nuribooks
+    password: '@f3hgB7jc@KvWJQZ'
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
