feat: 생일쿠폰 1차 구현

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://133.186.241.167:3306/project_be7_nuribooks_dev?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://133.186.241.167:3306/project_be7_nuribooks_dev?useSSL=false
     username: be7_nuribooks
     password: '@f3hgB7jc@KvWJQZ'
     driver-class-name: com.mysql.cj.jdbc.Driver
