--- a/.github/workflows/prod-deploy-actions.yml
+++ b/.github/workflows/prod-deploy-actions.yml
@@ -44,4 +44,4 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script_stop: true
-          script: "./startup.sh batch 8083 8084"
+          script: "./startup.sh batch 8085"
